# kalendly-backend

./: .gitignore  README.md  google_auth_setup.py  pyproject.toml  render.yaml
app/: crud.py  db.py  google_calendar.py  main.py  models.py  schemas.py
app/api/: __init__.py  auth.py  availability.py  event_types.py  public.py
app/services/: google_calendar.py
