[project]
name = "kalendly"
version = "0.1.0"
description = "FastAPI server for scheduling logic and Google Calendar integration."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    "authlib>=1.3.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pytz>=2024.1",
    "starlette>=0.37.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.6",
]